# soop3

./: .gitignore  Cargo.toml  PLAN.md  README.md  test.txt  test_config.toml
src/: lib.rs  main.rs
src/config/: loading.rs  mod.rs  types.rs
src/server/: app.rs  fs.rs  listing.rs  mod.rs  uploads.rs
src/server/handlers/: assets.rs  files.rs  mod.rs  upload.rs
src/server/middleware/: auth.rs  cors.rs  mod.rs  security.rs
src/utils/: files.rs  ignore.rs  mod.rs  paths.rs
test_uploads/: 20250609_044355_uploaded_file.txt
tests/: comprehensive_integration_tests.rs  config.rs  configuration_integration_tests.rs  debug_test.rs  debug_upload.rs  http_auth_cors.rs  http_files.rs  http_uploads.rs  integration_tests.rs  security_integration_tests.rs  test_directory_links.rs  unit_tests.rs
tests/support/: mod.rs
